--- a/HTML/hola.html
+++ b/HTML/hola.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="../JS/05.prompt.confirm.js"></script>
+    <script src="../RETOS/reto_n1.js"></script>
 </body>
 </html>
